--- a/packages/SystemUI/res/values/custom_styles.xml
+++ b/packages/SystemUI/res/values/custom_styles.xml
@@ -12,6 +12,10 @@
      limitations under the License.
 -->
 <resources>
+    <!-- Switch bar text appearance -->
+    <style name="TextAppearance.SwitchBar" parent="@android:style/TextAppearance.Material.Title">
+        <item name="android:textColor">?android:attr/textColorPrimaryInverse</item>
+    </style>
 
     <!-- Tuner Theme-->
     <style name="ExTunerSettings" parent="@android:style/Theme.DeviceDefault.Settings">
