--- a/core/res/res/values/ssos_symbols.xml
+++ b/core/res/res/values/ssos_symbols.xml
@@ -214,5 +214,9 @@
     <java-symbol type="string" name="alert_slider_uevent_match_path" />
     <java-symbol type="bool" name="config_hasAlertSlider" />
     <java-symbol type="integer" name="config_alertSliderLocation" />
+
+    <!-- Any package that has one of the package names defined here will be prevented
+         from using specific sensors in order to stop battery drain -->
+    <java-symbol type="array" name="config_blockPackagesSensorDrain" />
  
 </resources>
