base: Smart Charging (1/4)
@ZeNiXxX - Bring to Android 10

Signed-off-by: ZeNiXxX <zenixxx.havoc@gmail.com>

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -104,4 +104,7 @@
     <!-- Whether device supports internal audio recording -->
     <java-symbol type="bool" name="config_hasInternalAudioRecordingSupport" />
 
+    <!-- Smart charging battery percentage -->
+    <java-symbol type="integer" name="config_smartChargingBatteryLevel" />
+
 </resources>
