SmartCharging: allow user set resume level [1/2]
Signed-off-by: ZeNiXxX <zenixxx.havoc@gmail.com>

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -109,5 +109,6 @@
     <java-symbol type="string" name="config_SmartChargingSysfsNode" />
     <java-symbol type="string" name="config_SmartChargingSuspendValue" />
     <java-symbol type="string" name="config_SmartChargingResumeValue" />
+    <java-symbol type="integer" name="config_smartChargingBatteryResumeLevel" />
 
 </resources>
