--- a/packages/SystemUI/res/values/ssos_styles.xml
+++ b/packages/SystemUI/res/values/ssos_styles.xml
@@ -14,4 +14,9 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="TriStateUiText">
+        <item name="android:textSize">11.0sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+    </style>
+
 </resources>
