VibratorService: implement OnePlus proprietary vibrator format
OnePlus proprietary vibrator hal doesn't work the way the open-source one does.

Add an encoding function to map the parameter(time in ms) to OnePlus HAL
friendly format.

Needs config_hasOnePlusHapticMotor=true.

Change-Id: I393588fdc85a7f7f9d35a96f601b09f71e625370
Signed-off-by: rituj <ritujbeniwal@gmail.com>
Signed-off-by: Park Ju Hyung <qkrwngud825@gmail.com>
Signed-off-by: Anirudh Gupta <anirudhgupta109@gmail.com>

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -115,4 +115,7 @@
     <!-- Clipboard force notify packages -->
     <java-symbol type="array" name="config_notifyClipboardPackages" />
 
+  <!-- Device has OnePlus haptic motor -->
+  <java-symbol type="bool" name="config_hasOnePlusHapticMotor" />
+
 </resources>
