Add config to make Smart Charging available on device
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: Ifc49c47196e0089d015c67b37546133214e12eb4

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -111,6 +111,7 @@
     <bool name="config_hasInternalAudioRecordingSupport">true</bool>
 
     <!-- Smart charging battery percentage -->
+    <bool name="config_smartChargingAvailable">true</bool>
     <integer name="config_smartChargingBatteryLevel">80</integer>
     <string name="config_SmartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/charging_enabled</string>
     <string name="config_SmartChargingSuspendValue" translatable="false">0</string>
