--- a/packages/SystemUI/res/values/ssos_strings.xml
+++ b/packages/SystemUI/res/values/ssos_strings.xml
@@ -190,4 +190,8 @@
 
     <!-- Biometric Dialog - Use Face -->
     <string name="biometric_dialog_button_use_face">Use Face</string>
+
+    <!-- FPS Info tile -->
+    <string name="quick_settings_fpsinfo_label">FPS Info</string>
+
 </resources>
