SystemUI: Allow listening for face only on pin/pass view
Useful for devices with popup camera

Change-Id: Ifba770dd1681858844d5d0290cbf385bfa47f841

cleanup - SystemUI: Allow listening for face only on pin/pass view

Change-Id: I04fe60e46e54bdead8b6f0dd432604bbaf711b1b

--- a/core/res/res/values/ssos_config.xml
+++ b/core/res/res/values/ssos_config.xml
@@ -194,7 +194,6 @@
          or FOD Circle hiding after the screen is put to sleep -->
     <bool name="config_hideFodCircleGoingToSleep">false</bool>
 
-
     <!-- Default values for LiveDisplay -->
     <bool name="config_enableLiveDisplay">true</bool>
     <integer name="config_dayColorTemperature">6500</integer>
@@ -227,4 +226,6 @@
     <!-- Should we filter any display modes which are unmapped? -->
     <bool name="config_filterDisplayModes">false</bool>
 
+    <!-- Enable face auth only when swiping security view -->
+    <bool name="config_faceAuthOnlyOnSecurityView">false</bool>
 </resources>
