--- a/packages/SystemUI/res/values/ssos_dimens.xml
+++ b/packages/SystemUI/res/values/ssos_dimens.xml
@@ -120,4 +120,7 @@
 
     <!-- App Lock -->
     <dimen name="applock_icon_dimension">54dp</dimen>
+
+    <!-- Biometric Prompt -->
+    <dimen name="biometric_dialog_fod_margin">44dp</dimen>
 </resources>
