fwb: Add screen off fod [1/2]
@AshutoshSundresh: Add a config and add validator to backup

The config will come in handy later

Change-Id: Ic45cf7619951480714153a571f1f94fa5207ce65

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -123,4 +123,7 @@
          timing(the duration which the vibrator is expected to vibrate for). -->
     <bool name="config_hasOnePlusHapticMotor">false</bool>
 
+    <!-- Screen off FOD -->
+    <bool name="config_supportScreenOffFod">false</bool>
+
 </resources>
