--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -100,7 +100,7 @@
     <color name="recents_dismiss_all_icon_color">@android:color/white</color>
 
     <color name="brightness_slider_progress">@*android:color/accent_device_default_dark</color>
-    <color name="brightness_slider_background">@android:color/black</color>
-    <color name="brightness_slider_icons">@android:color/white</color>
+    <color name="brightness_slider_background">#33000000</color>
+    <color name="brightness_slider_icons">#FFFFFF</color>
 
 </resources>
