--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -97,7 +97,7 @@
 
     <color name="recents_dismiss_all_background_color">@color/GM2_grey_900</color>
     <color name="recents_dismiss_all_background_color_ripple">#555555</color>
-    <color name="recents_dismiss_all_icon_color">@android:color/white</color>
+    <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_dark</color>
 
     <color name="brightness_slider_progress">@*android:color/accent_device_default_dark</color>
     <color name="brightness_slider_background">#33000000</color>
