--- a/packages/SystemUI/res/layout/quick_qs_status_icons.xml
+++ b/packages/SystemUI/res/layout/quick_qs_status_icons.xml
@@ -48,7 +48,7 @@
         android:gravity="center_vertical|end"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.QS.Status"
-        android:visibility="gone" />
+        android:text="" />
 
     <com.android.systemui.statusbar.phone.StatusIconContainer
         android:id="@+id/statusIcons"
