--- a/packages/SystemUI/res/drawable/ic_max_brightness.xml
+++ b/packages/SystemUI/res/drawable/ic_max_brightness.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
     android:width="15dp"
     android:height="15dp"
     android:viewportWidth="15"
     android:viewportHeight="15">
-
     <path
-        android:pathData="M0 0h24v24H0V0z" />
-    <path
-        android:fillColor="?android:colorControlNormal"
-        android:pathData="M20 8.69V4h-4.69L12 0.69 8.69 4H4v4.69L0.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zm-2 5.79V18h-3.52L12 20.48 9.52 18H6v-3.52L3.52 12 6 9.52V6h3.52L12 3.52 14.48 6H18v3.52L20.48 12 18 14.48zM12 6c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm0 10c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z" />
-    <path
-        android:fillColor="?android:colorControlNormal"
-        android:pathData="M 12 9.5 C 13.3807118746 9.5 14.5 10.6192881254 14.5 12 C 14.5 13.3807118746 13.3807118746 14.5 12 14.5 C 10.6192881254 14.5 9.5 13.3807118746 9.5 12 C 9.5 10.6192881254 10.6192881254 9.5 12 9.5 Z" />
+        android:name="path"
+        android:pathData="M 7.215 5.083 C 6.645 5.083 6.098 5.31 5.695 5.713 C 5.291 6.116 5.065 6.663 5.065 7.234 C 5.065 7.804 5.291 8.351 5.695 8.754 C 6.098 9.158 6.645 9.384 7.215 9.384 C 7.786 9.384 8.333 9.158 8.736 8.754 C 9.139 8.351 9.366 7.804 9.366 7.234 C 9.366 6.663 9.139 6.116 8.736 5.713 C 8.333 5.31 7.786 5.083 7.215 5.083 Z M 11.516 5.454 L 11.516 2.933 L 8.995 2.933 L 7.215 1.153 L 5.436 2.933 L 2.914 2.933 L 2.914 5.454 L 1.135 7.234 L 2.914 9.013 L 2.914 11.535 L 5.436 11.535 L 7.215 13.314 L 8.995 11.535 L 11.516 11.535 L 11.516 9.013 L 13.296 7.234 L 11.516 5.454 Z"
+        android:strokeColor="@color/brightness_slider_icons"
+        android:strokeWidth="1.3"/>
 </vector>
