--- a/packages/SystemUI/res/drawable/ic_min_brightness.xml
+++ b/packages/SystemUI/res/drawable/ic_min_brightness.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
     android:width="13dp"
     android:height="14dp"
     android:viewportWidth="13"
     android:viewportHeight="14">
-
     <path
-        android:pathData="M0 0h24v24H0V0z" />
-    <path
-        android:fillColor="?android:colorControlNormal"
-        android:pathData="M20 8.69V4h-4.69L12 0.69 8.69 4H4v4.69L0.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zm-2 5.79V18h-3.52L12 20.48 9.52 18H6v-3.52L3.52 12 6 9.52V6h3.52L12 3.52 14.48 6H18v3.52L20.48 12 18 14.48zM12 6c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm0 10c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z" />
+        android:name="path"
+        android:pathData="M 10.503 2.042 L 8.904 3.268 L 9.479 5.202 L 7.817 4.058 L 6.155 5.202 L 6.73 3.268 L 5.131 2.042 L 7.147 1.985 L 7.817 0.089 L 8.487 1.985 L 10.503 2.042 Z M 12.715 6.409 L 11.678 7.199 L 12.051 8.45 L 10.977 7.711 L 9.902 8.45 L 10.275 7.199 L 9.239 6.409 L 10.541 6.377 L 10.977 5.145 L 11.413 6.377 L 12.715 6.409 Z M 11.274 9.537 C 11.798 9.487 12.361 10.232 12.026 10.706 C 11.824 10.991 11.609 11.256 11.343 11.509 C 8.872 13.993 4.872 13.993 2.407 11.509 C -0.064 9.044 -0.064 5.037 2.407 2.573 C 2.66 2.32 2.925 2.092 3.21 1.89 C 3.684 1.555 4.429 2.118 4.379 2.642 C 4.208 4.45 4.815 6.327 6.205 7.711 C 7.589 9.101 9.46 9.708 11.274 9.537 Z M 10.237 10.814 C 8.449 10.713 6.679 9.973 5.308 8.621 C 3.936 7.237 3.203 5.461 3.102 3.679 C 1.326 5.663 1.396 8.709 3.298 10.618 C 5.207 12.52 8.253 12.59 10.237 10.814 Z"
+        android:fillColor="@color/brightness_slider_icons"
+        android:strokeWidth="1"/>
 </vector>
