--- a/packages/SystemUI/res/layout/quick_qs_status_icons.xml
+++ b/packages/SystemUI/res/layout/quick_qs_status_icons.xml
@@ -45,6 +45,8 @@
         android:id="@+id/data_sim_usage"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
         android:gravity="center_vertical|end"
         android:singleLine="true"
         android:textAppearance="@style/TextAppearance.QS.Status"
