--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -204,6 +204,8 @@
 
     <color name="GM2_yellow_500">#FFFBBC04</color>
     <color name="GM2_green_500">#FF34A853</color>
+    <color name="brightness_slider_progress">?android:attr/colorAccent</color>
+    <color name="brightness_slider_icons">?android:attr/colorAccent</color>
 
     <color name="volume_dialog_background">@android:color/white</color>
     <color name="volume_background_tint">#f2f2f2</color>
@@ -224,13 +226,11 @@
 
     <color name="recents_dismiss_all_background_color">@android:color/white</color>
     <color name="recents_dismiss_all_background_color_ripple">#a8a8a8</color>
-    <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_light</color>
+     <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_light</color>
 
     <color name="qs_drag_handle_color">#66e5e5e5</color>
 
-    <color name="brightness_slider_progress">@*android:color/accent_device_default_dark</color>
-    <color name="brightness_slider_background">#5EFFFFFF</color>
-    <color name="brightness_slider_icons">#000000</color>
+    <color name="brightness_slider_background">#FFFFFF</color>
 
 </resources>
 
