--- a/packages/SystemUI/res/drawable/ic_max_brightness.xml
+++ b/packages/SystemUI/res/drawable/ic_max_brightness.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="vector"
@@ -6,9 +5,11 @@
     android:height="15dp"
     android:viewportWidth="15"
     android:viewportHeight="15">
-    <path
-        android:name="path"
-        android:pathData="M 7.215 5.083 C 6.645 5.083 6.098 5.31 5.695 5.713 C 5.291 6.116 5.065 6.663 5.065 7.234 C 5.065 7.804 5.291 8.351 5.695 8.754 C 6.098 9.158 6.645 9.384 7.215 9.384 C 7.786 9.384 8.333 9.158 8.736 8.754 C 9.139 8.351 9.366 7.804 9.366 7.234 C 9.366 6.663 9.139 6.116 8.736 5.713 C 8.333 5.31 7.786 5.083 7.215 5.083 Z M 11.516 5.454 L 11.516 2.933 L 8.995 2.933 L 7.215 1.153 L 5.436 2.933 L 2.914 2.933 L 2.914 5.454 L 1.135 7.234 L 2.914 9.013 L 2.914 11.535 L 5.436 11.535 L 7.215 13.314 L 8.995 11.535 L 11.516 11.535 L 11.516 9.013 L 13.296 7.234 L 11.516 5.454 Z"
-        android:strokeColor="@color/brightness_slider_icons"
-        android:strokeWidth="1.3"/>
+    <group android:name="group">
+        <path
+            android:name="path"
+            android:pathData="M 7.5 0.1 C 7.8 0.1 8 0.3 8 0.6 L 8 3.2 C 8 3.5 7.8 3.7 7.5 3.7 C 7.3 3.8 7 3.5 7 3.3 L 7 0.6 C 7 0.3 7.3 0.1 7.5 0.1 Z M 7.6 11.2 C 7.9 11.2 8.1 11.4 8.1 11.7 L 8.1 14.3 C 8.1 14.6 7.9 14.8 7.6 14.8 C 7.3 14.8 7.1 14.6 7.1 14.3 L 7.1 11.7 C 7.1 11.4 7.3 11.2 7.6 11.2 Z M 0.2 7.5 C 0.2 7.2 0.4 7 0.7 7 L 3.3 7 C 3.6 7 3.8 7.2 3.8 7.5 C 3.8 7.8 3.6 8 3.3 8 L 0.7 8 C 0.4 8 0.2 7.8 0.2 7.5 Z M 11.2 7.5 C 11.2 7.2 11.4 7 11.7 7 L 14.3 7 C 14.6 7 14.8 7.2 14.8 7.5 C 14.8 7.8 14.6 8 14.3 8 L 11.7 8 C 11.5 8 11.2 7.7 11.2 7.5 Z M 2.3 12.8 C 2.1 12.6 2.1 12.3 2.3 12.1 L 4.2 10.2 C 4.4 10 4.7 10 4.9 10.2 C 5.1 10.4 5.1 10.7 4.9 10.9 L 3 12.8 C 2.9 13 2.5 13 2.3 12.8 Z M 10.1 4.9 C 9.9 4.7 9.9 4.4 10.1 4.2 L 12 2.3 C 12.2 2.1 12.5 2.1 12.7 2.3 C 12.9 2.5 12.9 2.8 12.7 3 L 10.8 4.9 C 10.7 5.1 10.3 5.1 10.1 4.9 Z M 2.3 2.3 C 2.6 2 2.9 2 3.1 2.3 L 5 4.2 C 5.2 4.4 5.2 4.7 5 4.9 C 4.8 5.1 4.5 5.1 4.3 4.9 L 2.3 3 C 2.1 2.8 2.1 2.5 2.3 2.3 Z M 10.2 10.1 C 10.4 9.9 10.7 9.9 10.9 10.1 L 12.8 12 C 13 12.2 13 12.5 12.8 12.7 C 12.6 12.9 12.3 12.9 12.1 12.7 L 10.2 10.8 C 10 10.6 10 10.3 10.2 10.1 Z M 10.2 7.5 C 10.2 8.9 9 10.1 7.6 10.1 C 6.2 10.1 5 8.9 5 7.5 C 5 6.1 6.2 4.9 7.6 4.9 C 9 4.9 10.2 6 10.2 7.5 Z"
+            android:fillColor="@color/brightness_slider_icons"
+            android:strokeWidth="1"/>
+    </group>
 </vector>
