--- a/packages/SystemUI/res/drawable/ic_min_brightness.xml
+++ b/packages/SystemUI/res/drawable/ic_min_brightness.xml
@@ -2,13 +2,15 @@
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:name="vector"
-    android:width="13dp"
-    android:height="14dp"
-    android:viewportWidth="13"
-    android:viewportHeight="14">
-    <path
-        android:name="path"
-        android:pathData="M 10.503 2.042 L 8.904 3.268 L 9.479 5.202 L 7.817 4.058 L 6.155 5.202 L 6.73 3.268 L 5.131 2.042 L 7.147 1.985 L 7.817 0.089 L 8.487 1.985 L 10.503 2.042 Z M 12.715 6.409 L 11.678 7.199 L 12.051 8.45 L 10.977 7.711 L 9.902 8.45 L 10.275 7.199 L 9.239 6.409 L 10.541 6.377 L 10.977 5.145 L 11.413 6.377 L 12.715 6.409 Z M 11.274 9.537 C 11.798 9.487 12.361 10.232 12.026 10.706 C 11.824 10.991 11.609 11.256 11.343 11.509 C 8.872 13.993 4.872 13.993 2.407 11.509 C -0.064 9.044 -0.064 5.037 2.407 2.573 C 2.66 2.32 2.925 2.092 3.21 1.89 C 3.684 1.555 4.429 2.118 4.379 2.642 C 4.208 4.45 4.815 6.327 6.205 7.711 C 7.589 9.101 9.46 9.708 11.274 9.537 Z M 10.237 10.814 C 8.449 10.713 6.679 9.973 5.308 8.621 C 3.936 7.237 3.203 5.461 3.102 3.679 C 1.326 5.663 1.396 8.709 3.298 10.618 C 5.207 12.52 8.253 12.59 10.237 10.814 Z"
-        android:fillColor="@color/brightness_slider_icons"
-        android:strokeWidth="1"/>
+    android:width="15dp"
+    android:height="15dp"
+    android:viewportWidth="15"
+    android:viewportHeight="15">
+    <group android:name="group">
+        <path
+            android:name="path"
+            android:pathData="M 10.1 7.5 C 10.1 8.9 9 10.1 7.5 10.1 C 6 10.1 4.9 8.9 4.9 7.5 C 4.9 6.1 6.1 4.9 7.5 4.9 C 8.9 4.9 10.1 6.1 10.1 7.5 Z M 6.1 3.1 C 6.1 3.7 5.6 4.2 5 4.2 C 4.4 4.2 3.8 3.7 3.8 3.1 C 3.8 2.5 4.4 2 4.9 2 C 5.5 1.9 6.1 2.4 6.1 3.1 Z M 11.2 3.1 C 11.2 3.7 10.7 4.2 10.1 4.2 C 9.4 4.2 8.9 3.7 8.9 3.1 C 8.9 2.5 9.5 2 10.1 2 C 10.7 1.9 11.2 2.4 11.2 3.1 Z M 6.1 11.9 C 6.1 12.5 5.6 13 5 13 C 4.4 13 3.9 12.5 3.9 11.9 C 3.9 11.3 4.4 10.8 5 10.8 C 5.6 10.8 6.1 11.3 6.1 11.9 Z M 11.2 11.9 C 11.2 12.5 10.7 13 10.1 13 C 9.5 13 9 12.5 9 11.9 C 9 11.3 9.5 10.8 10.1 10.8 C 10.7 10.8 11.2 11.3 11.2 11.9 Z M 3.5 7.5 C 3.5 8.1 3 8.6 2.4 8.6 C 1.8 8.6 1.2 8.1 1.2 7.5 C 1.2 6.9 1.7 6.4 2.3 6.4 C 2.9 6.4 3.5 6.8 3.5 7.5 Z M 13.8 7.5 C 13.8 8.1 13.3 8.6 12.7 8.6 C 12.1 8.6 11.6 8.1 11.6 7.5 C 11.6 6.9 12.1 6.4 12.7 6.4 C 13.3 6.3 13.8 6.8 13.8 7.5 Z"
+            android:fillColor="@color/brightness_slider_icons"
+            android:strokeWidth="1"/>
+    </group>
 </vector>
