--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -95,12 +95,12 @@
 
     <color name="qs_tile_background_color_disabled">#1f1f1f</color>
 
-    <color name="recents_dismiss_all_background_color">@color/GM2_grey_900</color>
+    <color name="recents_dismiss_all_background_color">@*android:color/primary_dark_device_default_settings</color>
     <color name="recents_dismiss_all_background_color_ripple">#555555</color>
     <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_dark</color>
 
     <color name="brightness_slider_progress">?android:attr/colorAccent</color>
-    <color name="brightness_slider_background">@android:color/black</color>
+    <color name="brightness_slider_background">@*android:color/primary_dark_device_default_settings</color>
     <color name="brightness_slider_icons">?android:attr/colorAccent</color>
 
 </resources>
