--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -226,11 +226,11 @@
 
     <color name="recents_dismiss_all_background_color">@android:color/white</color>
     <color name="recents_dismiss_all_background_color_ripple">#a8a8a8</color>
-     <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_light</color>
+     <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_dark</color>
 
     <color name="qs_drag_handle_color">#66e5e5e5</color>
 
-    <color name="brightness_slider_background">#FFFFFF</color>
+    <color name="brightness_slider_background">@android:color/white</color>
 
 </resources>
 
