FOD: allow user to disable night light when active [1/2]
Make this optional for some devices and config for default true on devices which weird light sensors on FOD
eg: OP7TPRO

Signed-off-by: Varun Date <date.varun123@gmail.com>
Change-Id: Idacb9a15f9507ea78306b064e8deb2e4118b385c

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -126,4 +126,7 @@
     <!-- Screen off FOD -->
     <bool name="config_supportScreenOffFod">false</bool>
 
+    <!-- NightLight FOD -->
+    <bool name="disable_fod_night_light">false</bool>
+
 </resources>
