--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -121,4 +121,7 @@
     <!-- Screen off FOD -->
     <java-symbol type="bool" name="config_supportScreenOffFod" />
 
+    <!-- NightLight FOD -->
+    <java-symbol type="bool" name="disable_fod_night_light"/>
+
 </resources>
