--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -212,11 +212,11 @@
     <color name="keyguard_affordance_background_preview">#797979</color>
     <color name="keyguard_affordance_background_preview_background">#f2f2f2</color>
 
-    <color name="qs_tile_background_color_disabled">@color/volume_background_tint</color>
+    <color name="qs_tile_background_color_disabled">#f2f2f2</color>
 
     <color name="recents_dismiss_all_background_color">@android:color/white</color>
     <color name="recents_dismiss_all_background_color_ripple">#a8a8a8</color>
-     <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_dark</color>
+    <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_dark</color>
 
     <color name="qs_drag_handle_color">#66e5e5e5</color>
 
