--- a/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
@@ -58,12 +58,15 @@
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal" />
 
-        <com.android.systemui.BatteryMeterView
-           android:id="@+id/batteryRemainingIcon"
-           android:layout_height="match_parent"
-           android:layout_width="wrap_content"
-           android:layout_gravity="center_vertical|end"
-           systemui:textAppearance="@style/TextAppearance.QS.Status"
-           android:paddingEnd="2dp" />
+    <com.android.systemui.statusbar.info.DataUsageView
+        android:id="@+id/data_sim_usage"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical|end"
+        android:paddingStart="@dimen/status_bar_left_clock_starting_padding"
+        android:paddingEnd="@dimen/status_bar_left_clock_end_padding"
+        android:singleLine="true"
+        android:textAppearance="@style/TextAppearance.StatusBar.Clock"
+        android:text="" />
 
 </LinearLayout>
