--- a/packages/SystemUI/res/drawable/recents_dismiss_all_icon.xml
+++ b/packages/SystemUI/res/drawable/recents_dismiss_all_icon.xml
@@ -5,5 +5,5 @@
     android:width="@dimen/dismiss_all_fab_src_size"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="?attr/colorAccent" android:pathData="M5,13H19V11H5M3,17H17V15H3M7,7V9H21V7" />
+    <path android:fillColor="@color/recents_dismiss_all_icon_color" android:pathData="M5,13H19V11H5M3,17H17V15H3M7,7V9H21V7" />
 </vector>
