--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -4292,4 +4292,8 @@
 
     <!-- Class name of the custom country detector to be used. -->
     <string name="config_customCountryDetector" translatable="false">com.android.server.location.ComprehensiveCountryDetector</string>
+
+    <!-- Whether device supports in-display fingerprint when screen is turned off -->
+    <bool name="config_supportScreenOffFod">false</bool>
+
 </resources>
