--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -111,7 +111,7 @@
     <bool name="config_hasInternalAudioRecordingSupport">true</bool>
 
     <!-- Smart charging battery percentage -->
-    <bool name="config_smartChargingAvailable">true</bool>
+    <bool name="config_smartChargingAvailable">false</bool>
     <integer name="config_smartChargingBatteryLevel">80</integer>
     <string name="config_SmartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string>
     <string name="config_SmartChargingSuspendValue" translatable="false">1</string>
