--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -215,10 +215,8 @@
     <color name="qs_tile_background_color_disabled">#f2f2f2</color>
 
     <color name="recents_dismiss_all_background_color">@android:color/white</color>
-    <color name="recents_dismiss_all_background_color_ripple">@color/system_primary_color</color>
-    <color name="recents_dismiss_all_icon_color">#ff000000</color>
-    <color name="accent_device_default_light">@*android:color/accent_device_default_light</color>
-    <color name="system_primary_color">@*android:color/background_floating_device_default_dark</color>
+    <color name="recents_dismiss_all_background_color_ripple">#a8a8a8</color>
+    <color name="recents_dismiss_all_icon_color">@*android:color/accent_device_default_dark</color>
 
     <color name="qs_drag_handle_color">#66e5e5e5</color>
 
