--- a/packages/SystemUI/res/values/ssos_dimens.xml
+++ b/packages/SystemUI/res/values/ssos_dimens.xml
@@ -123,4 +123,8 @@
 
     <!-- Biometric Prompt -->
     <dimen name="biometric_dialog_fod_margin">44dp</dimen>
+
+    <!-- Global actions -->
+    <dimen name="global_actions_power_dialog_message_top_margin">15dp</dimen>
+    <dimen name="global_actions_power_dialog_twoline_message_top_margin">0dp</dimen>
 </resources>
