Make config_vibrateOnIconAnimation an internal overlay

--- a/core/res/res/values/ssos_symbols.xml
+++ b/core/res/res/values/ssos_symbols.xml
@@ -16,6 +16,10 @@
 -->
 <resources>
 
+     <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
+      vibrator is capable of subtle vibrations -->
+     <java-symbol type="bool" name="config_vibrateOnIconAnimation" />
+
      <!-- Rotation sensor -->
      <java-symbol type="bool" name="config_useSystemClockforRotationSensor" />
 
